--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -13,7 +13,9 @@
 <body>
     <header>
         <div class="logo-container">
-            <h1>Amazon SNAP - Graph Database</h1>
+            <a href="{{ url_for('main.home') }}" style="text-decoration: none; color: inherit;">
+                <h1>Amazon SNAP - Graph Database</h1>
+            </a>
         </div>
         <nav>
             <a href="{{ url_for('main.home') }}" class="nav-button">
